AUDIO_SETINFO: fix a bug that the gain and the balance could not be set at the same time.  Fix PR kern/56308.